Revert "Minor improvements."
This reverts commit c971334769b06b1751a8e404a021812e16c9678a.